completed Welcome VC design

--- a/Weather/Weather/StoryBoards/Base.lproj/Main.storyboard
+++ b/Weather/Weather/StoryBoards/Base.lproj/Main.storyboard
@@ -42,10 +42,126 @@
             </objects>
             <point key="canvasLocation" x="-352" y="-28"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="0fN-xo-rHE">
+            <objects>
+                <viewController storyboardIdentifier="StartViewController" id="ltf-do-MCY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SSy-4I-zO8">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="G7b-bR-7mU">
+                                <rect key="frame" x="0.0" y="47" width="390" height="763"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JaR-OL-REd">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="610.33333333333337"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="RMO-N0-xEd">
+                                                <rect key="frame" x="29.333333333333343" y="188.33333333333337" width="331.33333333333326" height="233.66666666666663"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="YPy-PE-7fi">
+                                                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="YPy-PE-7fi" secondAttribute="height" multiplier="1:1" id="bsF-5z-DF7"/>
+                                                            <constraint firstAttribute="height" constant="80" id="jGF-CD-NPe"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2K-IG-D8M">
+                                                        <rect key="frame" x="0.0" y="96.999999999999972" width="167" height="43"/>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
+                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Dd-7Y-PkE">
+                                                        <rect key="frame" x="0.0" y="156.99999999999997" width="318.66666666666669" height="76.666666666666657"/>
+                                                        <string key="text">The "BloomWeather" app provides accurate forecast wherever you are. Therefore You should allow us to use your Location Services.</string>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="RMO-N0-xEd" firstAttribute="width" secondItem="JaR-OL-REd" secondAttribute="width" multiplier="0.85" id="J39-7U-4FV"/>
+                                            <constraint firstItem="RMO-N0-xEd" firstAttribute="centerX" secondItem="JaR-OL-REd" secondAttribute="centerX" id="edq-aG-IPB"/>
+                                            <constraint firstItem="RMO-N0-xEd" firstAttribute="centerY" secondItem="JaR-OL-REd" secondAttribute="centerY" id="ybp-Ew-3Sv"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dKk-tA-Vfo">
+                                        <rect key="frame" x="0.0" y="611.33333333333337" width="390" height="48.666666666666629"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LM6-0w-yx0">
+                                                <rect key="frame" x="29.333333333333343" y="-0.66666666666674246" width="331.33333333333326" height="50"/>
+                                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="Vqx-FI-K0a"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="Next">
+                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="LM6-0w-yx0" firstAttribute="centerY" secondItem="dKk-tA-Vfo" secondAttribute="centerY" id="9iX-oS-rSK"/>
+                                            <constraint firstItem="LM6-0w-yx0" firstAttribute="centerX" secondItem="dKk-tA-Vfo" secondAttribute="centerX" id="rPF-8F-2oa"/>
+                                            <constraint firstItem="LM6-0w-yx0" firstAttribute="width" secondItem="dKk-tA-Vfo" secondAttribute="width" multiplier="0.85" id="yIH-WS-2D1"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Oq-tf-QOa">
+                                        <rect key="frame" x="0.0" y="661" width="390" height="102"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We use and sharee the precise location of your device based on our Privacy Policy." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="BeX-B9-K25">
+                                                <rect key="frame" x="29.333333333333343" y="26.666666666666625" width="331.33333333333326" height="48.666666666666657"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="BeX-B9-K25" firstAttribute="width" secondItem="2Oq-tf-QOa" secondAttribute="width" multiplier="0.85" id="A7a-t8-aEy"/>
+                                            <constraint firstItem="BeX-B9-K25" firstAttribute="centerY" secondItem="2Oq-tf-QOa" secondAttribute="centerY" id="Zg3-tO-dG4"/>
+                                            <constraint firstItem="BeX-B9-K25" firstAttribute="centerX" secondItem="2Oq-tf-QOa" secondAttribute="centerX" id="nGY-47-aM1"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="BeX-B9-K25" firstAttribute="height" secondItem="dKk-tA-Vfo" secondAttribute="height" id="Fm5-Bs-Djd"/>
+                                    <constraint firstItem="JaR-OL-REd" firstAttribute="height" secondItem="G7b-bR-7mU" secondAttribute="height" multiplier="0.8" id="YtB-0s-Evp"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bKP-LP-Q8z"/>
+                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bKP-LP-Q8z" firstAttribute="trailing" secondItem="G7b-bR-7mU" secondAttribute="trailing" id="K4L-Na-yc0"/>
+                            <constraint firstItem="bKP-LP-Q8z" firstAttribute="bottom" secondItem="G7b-bR-7mU" secondAttribute="bottom" id="KCP-tI-9Au"/>
+                            <constraint firstItem="G7b-bR-7mU" firstAttribute="top" secondItem="bKP-LP-Q8z" secondAttribute="top" id="P13-xw-yB4"/>
+                            <constraint firstItem="G7b-bR-7mU" firstAttribute="leading" secondItem="bKP-LP-Q8z" secondAttribute="leading" id="ld0-30-fkt"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="sjQ-fT-1ml"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0mz-t7-J9M" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1885" y="-28"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="logo" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
