--- a/Weather/Weather/StoryBoards/Base.lproj/Main.storyboard
+++ b/Weather/Weather/StoryBoards/Base.lproj/Main.storyboard
@@ -42,10 +42,10 @@
             </objects>
             <point key="canvasLocation" x="-352" y="-28"/>
         </scene>
-        <!--View Controller-->
+        <!--Welcome View Controller-->
         <scene sceneID="0fN-xo-rHE">
             <objects>
-                <viewController storyboardIdentifier="StartViewController" id="ltf-do-MCY" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WelcomeViewController" id="ltf-do-MCY" customClass="WelcomeViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SSy-4I-zO8">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -73,8 +73,8 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Dd-7Y-PkE">
-                                                        <rect key="frame" x="0.0" y="156.99999999999997" width="318.66666666666669" height="76.666666666666657"/>
-                                                        <string key="text">The "BloomWeather" app provides accurate forecast wherever you are. Therefore You should allow us to use your Location Services.</string>
+                                                        <rect key="frame" x="0.0" y="156.99999999999997" width="329.66666666666669" height="76.666666666666657"/>
+                                                        <string key="text">The 'BloomWeather' app provides accurate forecast wherever you are. Therefore You should allow us to use your Location Services.</string>
                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -105,6 +105,9 @@
                                                 <state key="normal" title="Next">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="continueButtonPressed:" destination="ltf-do-MCY" eventType="touchUpInside" id="Zdp-ny-Bdz"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -149,6 +152,13 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="sjQ-fT-1ml"/>
+                    <connections>
+                        <outlet property="IconImage" destination="YPy-PE-7fi" id="VHe-4u-liy"/>
+                        <outlet property="continueButton" destination="LM6-0w-yx0" id="8to-dJ-bft"/>
+                        <outlet property="descriptionLabel" destination="5Dd-7Y-PkE" id="q9P-iR-rY5"/>
+                        <outlet property="greetingLabel" destination="j2K-IG-D8M" id="BoN-tt-WBO"/>
+                        <outlet property="privacyLabel" destination="BeX-B9-K25" id="sjx-rG-KON"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0mz-t7-J9M" sceneMemberID="firstResponder"/>
             </objects>
